--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,13 @@
                     <h1>Jumping Kangaroos</h1>
                     <h2>Freighter Reward Calculator</h2>
                 </div>
-                <div class="col-md-3 col-md-offset-3">
+                <div class="col-md-6">
                     <h6 ng-hide="auth.status">
                         <a href="/auth/eveonline">
-                            <img class="img-responsive" alt="LOG IN with EVE Online" src="https://images.contentful.com/idjq7aai9ylm/18BxKSXCymyqY4QKo8KwKe/c2bdded6118472dd587c8107f24104d7/EVE_SSO_Login_Buttons_Small_White.png?w=195&h=30"/>
+                            <img class="img-responsive pull-right" alt="LOG IN with EVE Online" src="https://images.contentful.com/idjq7aai9ylm/18BxKSXCymyqY4QKo8KwKe/c2bdded6118472dd587c8107f24104d7/EVE_SSO_Login_Buttons_Small_White.png?w=195&h=30"/>
                         </a>
                     </h6>
-                    <div ng-show="auth.status">
-                        <h6 class="pull-right">Welcome Mr. {{ auth.name }}</h6>
-                        <button ng-click="auth.logout()" type="button" class="btn btn-danger btn-xs pull-right">Logout</button>
-                    </div>
+                    <h6 ng-show="auth.status" class="pull-right">Welcome Mr. {{ auth.name }} <button ng-click="auth.logout()" type="button" class="btn btn-danger btn-xs">Logout</button></h6>
                 </div>
             </div>
             <hr>
@@ -67,41 +64,54 @@
             </div>
             <hr>
             <div class="row" ng-controller="RoutesController as routes">
-                <div class="col-md-6">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Origin</th>
-                                <th>Destination</th>
-                                <th>Price</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Table cell</td>
-                                <td>Table cell</td>
-                                <td>Table cell</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-md-5 col-md-offset-1">
-                    <form>
-                        <div class="form-group">
-                            <label>Select origin system</label>
-                            <select class="form-control">
-                                <option>1</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Select destination system</label>
-                            <select class="form-control">
-                                <option>1</option>
-                            </select>
-                        </div>
-                    </form>
+                <div ng-show="routes.auth">
+                    <div class="col-md-6">
+                        <button class="btn btn-info" ng-click="routes.reload()">Reload Table</button>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Origin</th>
+                                    <th>Destination</th>
+                                    <th>Price</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="route in routes.all">
+                                    <th scope="row">{{ route.id }}</th>
+                                    <td>{{ route.origin }}</td>
+                                    <td>{{ route.destination }}</td>
+                                    <td>{{ route.price }}</td>
+                                    <td><button class="btn btn-danger btn-xs" ng-click="routes.delete(route.id)">Delete</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-md-5 col-md-offset-1">
+                        <form>
+                            <div class="form-group">
+                                <label>Select origin system</label>
+                                <input type="text" class="form-control" ng-model="routes.form.origin" placeholder="Type origin system">
+                            </div>
+                            <div class="form-group">
+                                <label>Select destination system</label>
+                                <input type="text" class="form-control" ng-model="routes.form.destination" placeholder="Type destination system">
+                            </div>
+                            <div class="form-group">
+                                <label>Select price per m3 in ISK</label>
+                                <div class="input-group">
+                                    <div class="input-group-addon">ISK</div>
+                                    <input type="text" class="form-control" ng-model="routes.form.price">
+                                    <div class="input-group-addon">.00</div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-success" ng-click="routes.add()">Add route</button>
+                                <button class="btn btn-warning" ng-click="routes.reset()">Reset</button>
+                            </div
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
